syntax = "proto3";

package mycel.mycel;

option go_package = "mycel/x/mycel/types";

// Msg defines the Msg service.
service Msg {
  rpc RegisterDomain     (MsgRegisterDomain    ) returns (MsgRegisterDomainResponse    );
  rpc UpdateWalletRecord (MsgUpdateWalletRecord) returns (MsgUpdateWalletRecordResponse);
}
message MsgRegisterDomain {
  string creator                  = 1;
  string name                     = 2;
  string parent                   = 3;
  uint64 registrationPeriodInYear = 4;
}

message MsgRegisterDomainResponse {}

message MsgUpdateWalletRecord {
  string creator          = 1;
  string name             = 2;
  string parent           = 3;
  string walletRecordType = 4;
  string value = 5;
}

message MsgUpdateWalletRecordResponse {}

